<resources>
    <string name="app_name">GitHubApp</string>
    <string name="search_title">Search</string>
    <string name="name">Name : </string>
    <string name="full_name">Full Name : </string>
    <string name="watchers_count">Watcher Count : </string>
    <string name="commit_count">Commit Count : </string>
    <string name="title_activity_repo_details">RepoDetails</string>
    <string name="project_link">Project Link :  </string>
    <string name="desc">Description : </string>
    <string name="contributors">Contributors : </string>
    <string name="repos">Repo List : </string>
</resources>
