<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.app.githubsample.activities.RepoDetails">

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/profile_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        fresco:viewAspectRatio="2"
        android:layout_margin="5dp"
        fresco:failureImage="@mipmap/ic_launcher"
        fresco:actualImageScaleType="center"
        fresco:placeholderImage="@mipmap/ic_launcher"
        />
    <TableLayout
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textStyle="bold"
                android:layout_column="1" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:layout_column="1" />

        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:text="@string/project_link"
                android:layout_width="wrap_content"
                android:textSize="15dp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:layout_column="1" />

            <TextView
                android:id="@+id/project_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:layout_column="1" />

        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:text="@string/desc"
                android:layout_width="wrap_content"
                android:textSize="15dp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:layout_column="1" />

            <TextView
                android:id="@+id/desc"
                android:layout_width="wrap_content"
                android:textSize="15dp"
                android:layout_height="wrap_content"
                android:layout_column="1" />

        </TableRow>

    </TableLayout>
    <TextView
        android:text="@string/contributors"
        android:layout_width="wrap_content"
        android:textSize="20dp"
        android:textStyle="bold"
        android:paddingLeft="10dp"
        android:layout_height="wrap_content"
       />
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:id="@+id/contributorslist"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>
</LinearLayout>
